# Trabalho-de-Estrutura-de-Dados-Bloco-de-Carnaval

./: CMakeLists.txt  LICENSE  README.md
Documentos/: Estrutura de Dados.drawio  Trabalho de Estrutura de Dados.docx
Menu Veículo/Teste01/: teste 1.c
Menu Veículo/Teste02/: teste 2.c
Menu Veículo/Teste03/: teste 3.c
Menu Veículo/Teste04/: teste 4.c
Menu Veículo/Teste05/: teste5.c
Menu Veículo/Teste06/: teste6.c
Menu Veículo/Teste07/: teste7.c
Menu Veículo/Teste08/: teste8.c
Menu Veículo/Teste09/: teste9.c
Menu Veículo/Teste10/: teste10.c
Teste/: teste 1.c
